fixed order and resizing on mobile

--- a/main.css
+++ b/main.css
@@ -18,8 +18,8 @@ a{
 #card{
     /* width: 50%; */
     display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
+    /* flex-direction: row; */
+    /* flex-wrap: wrap; */
     justify-self: center;
     border-radius:1%;
 }
@@ -72,9 +72,27 @@ img{
     justify-content: left;
 }
 
-@media screen and (min-width:799px){
+@media screen and (max-width: 931px){
+    img, .cont2{
+        height: 200px;
+        width: 300px;
+    }
+    
     .cont1{
         order: 1;
+    }
+
+    .benefits{
+        flex-direction: column;
+        padding: auto;
+        align-self: center;
+    }
+    .cont2{
+        height: fit-content;
+        text-align: center;
+    }
+    #card{
+        flex-direction: column-reverse;
     }
 }
 
